force-app/main/default/objects/Resume_Profile__c/Resume_Profile__c.object-meta.xml
<CustomObject>
    <description>This the main container for a participant’s resume.</description>
    <label>Resume Profile</label>
    <nameField>
        <label>Resume Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resume Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>