force-app/main/default/objects/Resume_Profile__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resume Profiles</relationshipLabel>
    <relationshipName>Resume_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>