force-app/main/default/objects/Resume_Profile__c/fields/Professional_Summary__c.field-meta.xml
<CustomField>
    <fullName>Professional_Summary__c</fullName>
    <label>Professional Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>