force-app/main/default/objects/Resume_Profile__c/fields/Resume_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Resume_Last_Updated__c</fullName>
    <label>Resume Last Updated</label>
    <type>Date</type>
</CustomField>